fix(ui): wallet trans overflow final fix

--- a/src/styles.css
+++ b/src/styles.css
@@ -32,4 +32,6 @@ input:focus {
 
 .test-class {
   flex-grow: 1;
+  flex-direction: column;
+  flex: 1 auto content;
 }
